dist_man1_MANS=

if BUILD_GLOBED
  dist_man1_MANS+=globed.1
endif

if ENABLE_QT
  dist_man1_MANS+=globe-qt.1
endif

if BUILD_GLOBE_CLI
  dist_man1_MANS+=globe-cli.1
endif

if BUILD_GLOBE_TX
  dist_man1_MANS+=globe-tx.1
endif

if BUILD_GLOBE_UTIL
  dist_man1_MANS+=globe-util.1
endif

if ENABLE_WALLET
if BUILD_GLOBE_WALLET
  dist_man1_MANS+=globe-wallet.1
endif
endif
